chore: add MATRIX and YOUTUBE env examples

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,13 @@
 KARAKEEP_BASE_URL=http://your-karakeep-instance:3080
 KARAKEEP_LIST_ID=your_list_id_here
 KARAKEEP_API_KEY=your_api_key_here
+
+# Matrix API Configuration (optional - only needed for fetching URLs from Matrix rooms)
+MATRIX_HOMESERVER=https://matrix.org
+MATRIX_ROOM_ID=!roomid:matrix.org
+MATRIX_ACCESS_TOKEN=syt_your_access_token_here
+
+# YouTube API Configuration (for youtube.py script)
+YOUTUBE_CLIENT_ID=your_client_id_here.apps.googleusercontent.com
+YOUTUBE_CLIENT_SECRET=your_client_secret_here
+YOUTUBE_PROJECT_ID=your_project_id_here
